jetpack compose demos, livedata/flow/viewmodel demos, experimental api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,3 @@
 <resources>
-    <string name="app_name">BP</string>
-    <string name="scanner_logo">Scanner logo</string>
-    <string name="take_photo_text">Camera demo</string>
-    <string name="capture_image">Capture image</string>
-    <string name="recognition_result_placeholder">Result placeholder</string>
-    <string name="detect_text">Detect</string>
-    <string name="prompt_snap">Snap</string>
+    <string name="app_name">JetpackComposeTestProject</string>
 </resources>
