--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">JetpackComposeTestProject</string>
+    <string name="dependency_string"><![CDATA[I got this string from DI using Hilt <3]]></string>
 </resources>
