string resources added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,102 @@
 <resources>
     <string name="app_name">LostAndFound</string>
     <string name="branding">Lost and Found</string>
+    <string name="screen_about_uni_developers">University app developers</string>
+    <string name="screen_about_main_dev_role">Android, as part of bachelor\'s thesis</string>
+    <string name="screen_about_main_dev" translatable="false">Jakub Šlechta</string>
+    <string name="screen_about_cooperation">Cooperation</string>
+    <string name="screen_about_bachelor_supervisor" translatable="false">Ladislav Pešička</string>
+    <string name="screen_about_bachelor_supervisor_role">Supervisor of the bachelor\'s thesis</string>
+    <string name="screen_about_thanks">Thanks</string>
+    <string name="screen_about_thanks_students">Students</string>
+    <string name="screen_about_thanks_students_text">Students from all universities which helped us with debugging and troubleshooting.</string>
+    <string name="screen_about_version">App version %1$s</string>
+    <string name="screen_settings_item_language">Language</string>
+    <string name="screen_settings_theme_system">System</string>
+    <string name="screen_settings_theme_dark">Dark</string>
+    <string name="screen_settings_theme_light">Light</string>
+    <string name="screen_settings_language_english">English</string>
+    <string name="screen_settings_language_czech">Czech</string>
+    <string name="screen_settings_item_theme">Theme</string>
+    <string name="screen_settings_theme_dialog_title">Choose theme</string>
+    <string name="screen_settings_language_dialog_title">Choose langugae</string>
+    <string name="screen_profile_phone_number_change_success">Successfully changed phone number</string>
+    <string name="screen_profile_phone_number_change_failure">Couldn\'t change phone number</string>
+    <string name="screen_profile_remove_number">Remove number</string>
+    <string name="screen_profile_validation_message">Phone number must contain only numbers (max. %1$s digits)</string>
+    <string name="screen_profile_phone_number">Phone number</string>
+    <string name="screen_profile_enter_phone_number">Enter phone number</string>
+    <string name="screen_profile_change_phone_number">Change phone number</string>
+    <string name="screen_profile_change_action">Change</string>
+    <string name="screen_profile_update_picture_success">Successfully updated profile picture</string>
+    <string name="screen_profile_update_picture_failure">Failed to update profile picture</string>
+    <string name="screen_profile_content_descriptor_profile_picture">Profile picture</string>
+    <string name="screen_profile_edit_action">Edit</string>
+    <string name="screen_profile_name">Name</string>
+    <string name="screen_profile_email" translatable="false">Email</string>
+    <string name="screen_profile_logout_action">Logout</string>
+    <string name="screen_profile_not_added_yet">Not added yet</string>
+    <string name="navigation_auth">Authentication</string>
+    <string name="navigation_find_lost_item">Find item</string>
+    <string name="navigation_update_lost_item">Update item</string>
+    <string name="navigation_add_lost_item">Add item</string>
+    <string name="navigation_lost_item_detail">Lost item detail</string>
+    <string name="navigation_my_posts">My posts</string>
+    <string name="navigation_settings">Settings</string>
+    <string name="navigation_profile">Profile</string>
+    <string name="navigation_change_number">Change phone number</string>
+    <string name="navigation_change_profile_picture">Change profile picture</string>
+    <string name="navigation_about_app">About app</string>
+    <string name="navigation_maps">Maps</string>
+    <string name="navigation_mark_lost_item">Mark lost item</string>
+    <string name="screen_lost_item_card_image_content_description">add lost item image</string>
+    <string name="screen_lost_item_choose_image_action">Choose an image</string>
+    <string name="screen_lost_item_title">Title</string>
+    <string name="screen_lost_item_description">Description</string>
+    <string name="screen_lost_item_all_fields_must_be_filled_note">All fields must be filled</string>
+    <string name="screen_lost_item_mark_item_action">Mark item on map</string>
+    <string name="screen_lost_item_item_marked">Item marked</string>
+    <string name="screen_lost_item_create_action">Create</string>
+    <string name="screen_lost_item_create_success">Successfully created new item</string>
+    <string name="screen_lost_item_create_failure">Failed to create new item</string>
+    <string name="screen_lost_item_contact_person_action">Contact person</string>
+    <string name="screen_lost_item_email" translatable="false">Email</string>
+    <string name="screen_lost_item_phone_number">Phone number</string>
+    <string name="screen_lost_item_contact_post_owner_content_description">contact post owner</string>
+    <string name="screen_lost_item_close_action">Close</string>
+    <string name="screen_lost_item_validation_message">Term cannot have more than %1$s characters</string>
+    <string name="screen_lost_item_add_new_filter_action">Add a new filter</string>
+    <string name="screen_lost_item_add_term_action">Add term</string>
+    <string name="screen_lost_item_search_action">Search</string>
+    <string name="screen_lost_item_cancel_action">Cancel</string>
+    <string name="screen_lost_item_add_action">Add</string>
+    <string name="screen_lost_item_remove_filter_content_description">remove filter</string>
+    <string name="screen_lost_item_date_not_available">Date not available</string>
+    <string name="screen_lost_item_post_owner_info_content_description">post owner info</string>
+    <string name="screen_lost_item_search_lost_items_content_description">search lost items</string>
+    <string name="screen_lost_item_couldnt_load_items_message">Couldn\'t load lost item detail</string>
+    <string name="screen_lost_item_lost_item">Lost item</string>
+    <string name="screen_lost_item_search_for_location_placeholder">Search for a location</string>
+    <string name="screen_lost_item_search_location_content_description">search location</string>
+    <string name="screen_lost_item_mark_location_prompt">Mark this location?</string>
+    <string name="screen_lost_item_mark_description">This location shows where the lost item was found.</string>
+    <string name="screen_lost_item_confirm_action">Confirm</string>
+    <string name="screen_lost_item_add_new_lost_item_content_description">add new lost item</string>
+    <string name="screen_lost_item_no_posts_yet_placeholder_1">No posts yet, add your first post by clicking on the</string>
+    <string name="screen_lost_item_no_posts_yet_placeholder_2" translatable="false">\" + \"</string>
+    <string name="screen_lost_item_no_posts_yet_placeholder_3">button!</string>
+    <string name="screen_lost_item_localized_description_content_description">localized description</string>
+    <string name="screen_lost_item_edit_action">Edit</string>
+    <string name="screen_lost_item_delete_action">Delete</string>
+    <string name="screen_lost_item_unknown_date">Unknown date</string>
+    <string name="screen_lost_item_deleting_lost_item_dialog_title">Deleting lost item post</string>
+    <string name="screen_lost_item_deleting_lost_item_dialog_body">Are you sure you want to delete \"%1$s\" post?</string>
+    <string name="screen_lost_item_contact_person">Contact person</string>
+    <string name="screen_lost_item_show_on_map_action">Show on map</string>
+    <string name="screen_lost_item_error_occurred_while_fetching_lost_items_message">Sorry, an error occurred while fetching lost items.</string>
+    <string name="screen_lost_item_edit_lost_image_content_description">edit lost item image</string>
+    <string name="screen_lost_item_update_action">Update</string>
+    <string name="screen_lost_item_update_success">Successfully updated lost item</string>
+    <string name="screen_lost_item_update_failur">Failed to update lost item</string>
+    <string name="top_app_bar_open_drawer_content_description">open navigation drawer</string>
 </resources>
